--- a/task6/task6.css
+++ b/task6/task6.css
@@ -3,14 +3,16 @@ body {
     margin: 0;
 }
 header {
-    background-color: #5fc0cd;
-    height: 3rem;
     position: fixed;
-    z-index: 1;
-    width: 100%;
     display: flex;
+    width: 100%;
+    height: 3rem;
     align-items: center;
     justify-content: center;
+    background-color: #5fc0cd; 
+    z-index: 1;
+    
+    
 }
 .find {   
     display: inline-flex;
@@ -27,6 +29,14 @@ header {
     border-radius: 0.2rem;
     float: right;
     padding: 0.3rem 0.4rem;
+}
+select {
+    text-align: center;
+    text-align-last: center;
+    width: 6rem;
+    border: none;
+    color: #999;
+    outline: none;
 }
 .icon1 {
     position: absolute;
@@ -52,10 +62,10 @@ header {
 .place,.house {
     border-right: 0.05rem solid #999;
 }
-.icon2 {
+/* .icon2 {
     position: relative;
     left: 25%;
-}
+} */
 .data,.address {
     padding: 0.5rem;
     color: #999;
@@ -78,8 +88,17 @@ header {
 .time2 {
     margin-left: 1.7rem;
 }
+.time {
+    /* display: flex; */
+    justify-content: space-between;
+}
+.prices {
+    display: inline-flex;
+    margin-right: 2rem;
+
+}
 .price {
-    margin-left: 5rem;
+    /* margin-left: 5rem; */
     color: #e63b0e;
 }
 .message {
