--- a/task7/result.css
+++ b/task7/result.css
@@ -39,10 +39,11 @@ header .read {
     padding: 1.5rem 2rem 0.1rem 2rem;
 }
 .result2 {
+    height: 6rem;
     color: #ffc865;
 }
 .total {
-    margin: 2rem 0 0.6rem 0;
+    margin: -1rem 0 0.6rem 0;
 }
 .total p {
     margin: 0.2rem 0 0.2rem 0;
