--- a/task7/vote.css
+++ b/task7/vote.css
@@ -43,6 +43,15 @@ header img {
     top: 0.5rem;
     color: #464646;
 }
+audio {
+    position: absolute;
+    width: 6rem;
+    height: 3rem;
+    opacity: 0;
+    right: 0.1rem;
+    top: 3rem;
+    transform: rotate(180deg);
+}
 .play {
     float: right;
     width: 2.2rem;
@@ -73,26 +82,27 @@ header img {
     color: #f2fbfd;
 }
 .identity {
-    margin-top: 1.5rem;
+    margin: 0 10%;
     text-align: center;
+    margin-bottom: 10rem;
     
 }
 .row {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-top: 12vw;
 }
 .profession {
-    border: 2.5px solid #fff;
-    width: 25vw;
-    height: 25vw;
+    border: 3px solid #fff;
+    /* width: 22vw; */
+    height: 22vw;
     
 }
 .type {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 18.5vw;
+    height: 16vw;
     background-color: #f5c97b;
     margin: 0;
 
@@ -102,11 +112,11 @@ header img {
     align-items: center;
     justify-content: center;
     background-color: #83b09a;
-    height: 6.5vw;
+    height: 6vw;
     margin: 0;
 }
 .father {
-    width: 26.5vw;
+    width: 22vw;
     
 }
 .hidden {
@@ -115,7 +125,7 @@ header img {
     
 }
 .hidden img {
-    width: 26.5vw; 
+    width: 22vw; 
 }
 .father:hover .hidden {
     display: block;
@@ -127,13 +137,14 @@ footer {
     z-index: 1;
     background-color: #29bde0;
     text-align: center;
-    left: 49.86%;
-    transform: translateX(-50%);
+    /* left: 49.86%; */
+    /* transform: translateX(-50%); */
+    margin: 0 10%;
     border-top: 1px solid white;
-    width: 94%;
+    width: 80%;
     bottom: 0;
     height: 5rem;
-    padding: 0.1rem;   
+    /* padding: 0.1rem;    */
 }
 button {
     margin-top: 1.2rem;
