企业官网新功能的添加

--- a/task8/company.css
+++ b/task8/company.css
@@ -114,7 +114,7 @@ h5 {
 .company:hover {
     color: #f9a372;
 }
-.sign:hover {
+.company:hover .sign {
     background-color: #f9a372;
 }
 .development {
