--- a/js-task2/css/page2.css
+++ b/js-task2/css/page2.css
@@ -59,13 +59,13 @@ main {
 }
 
 .role-people:before {
-  content: url("/image/squar1.png");
+  content: url("../image/squar1.png");
   position: relative;
   right: 5px;
 }
 
 .role-killer:before {
-  content: url("/image/squar2.png");
+  content: url("../image/squar2.png");
   position: relative;
   right: 5px;
 }
