--- a/js-task2/css/page2.css
+++ b/js-task2/css/page2.css
@@ -146,7 +146,7 @@ input[type="range"]::-webkit-slider-thumb {
   position: relative;
   top: 2px;
   -webkit-appearance: none;
-  background: url("/image/slide.png");
+  background: url("../image/slide.png");
   background-size: cover;
   background-repeat: no-repeat;
   width: 40px;
